Issue #16404: Add checks for return value of PyInt_FromLong() in sys.getwindowsversion() and ossaudiodev.setparameters(). Reported by Ned Batchelder.